--- a/src/App.css
+++ b/src/App.css
@@ -28,3 +28,19 @@
   background: #bee0f0;
   filter: blur(72px);
 }
+.button{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  border: none;
+  border-radius: 0.5rem;
+  background: var(--buttonBg);
+  transition: all 100ms ease-out;
+}
+.button:hover{
+  cursor: pointer;
+  color: var(--orange);
+  background: transparent;
+  border: 2px solid var(--orange);
+}
