Complited front-end for the home page

--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,9 @@
   --location: #ef576b;
   --schedule: #E1AE4A;
 }
-
+::-webkit-scrollbar{
+  display: none;
+}
 .App{
   overflow: hidden;
   color: var(--black);
