--- a/src/components/PostShare/PostShare.css
+++ b/src/components/PostShare/PostShare.css
@@ -43,3 +43,20 @@
     padding: 5px 20px;
     font-size: 12px;
 }
+.previewImage{
+    position: relative;
+}
+.previewImage>svg{
+    position: absolute;
+    right: 1rem;
+    top: 0.5rem;
+    cursor: pointer;
+    background: #ffffffc5;
+    border-radius: 50%;
+}
+.previewImage>img{
+    width: 100%;
+    max-height: 20rem;
+    object-fit: cover;
+    border-radius: 0.5rem;
+}
