--- a/client/src/components/profileCard/ProfileCard.css
+++ b/client/src/components/profileCard/ProfileCard.css
@@ -16,6 +16,8 @@
 }
 .ProfileImages>img:nth-of-type(1){
     width: 100%;
+    max-height: 20rem;
+    object-fit: cover;
 }
 .ProfileImages>img:nth-of-type(2){
     width: 6rem;
