--- a/client/src/App.css
+++ b/client/src/App.css
@@ -47,3 +47,9 @@
   background: #fff;
   border: 2px solid var(--orange);
 }
+.button:disabled{
+  background: #eee;
+  border: 2px solid #eee;
+  color: #666;
+  pointer-events: none;
+}
